add roles and correct tags to sidenavigation

--- a/templates/docs/examples/patterns/side-navigation/_layout-application.html
+++ b/templates/docs/examples/patterns/side-navigation/_layout-application.html
@@ -1,6 +1,6 @@
 {# used by the application layout example #}
 
-<div class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons">
+<nav class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons">
   {% if is_dark %}
   <!-- dark background color should be changed via color theme variables, inline style is used here for example purposes -->
   {% endif %}
@@ -20,38 +20,38 @@
           <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Second level link<div class="p-side-navigation__status"><i class="p-icon--warning {% if is_dark %}is-light{% endif %}"></i></div></a>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <span class="p-side-navigation__text">Second level text</span>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Second level link with children</a>
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item">
                 <span class="p-side-navigation__text">Third level text</span>
               </li>
-              <li class="p-side-navigation__item ">
+              <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link" href="#"><span class="u-truncate">Third level link with label that is truncated because it's long long long long long</span><div class="p-side-navigation__status"><span class="p-label--in-progress">In progress</span></div></a>
               </li>
-              <li class="p-side-navigation__item ">
+              <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link" aria-current="page" href="#">Third level active link</a>
               </li>
-              <li class="p-side-navigation__item ">
+              <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link" href="#">Third level link with status<div class="p-side-navigation__status"><i class="p-icon--success {% if is_dark %}is-light{% endif %}"></i></div></a>
               </li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <span class="p-side-navigation__text"><i class="p-icon--collapse {% if is_dark %}is-light{% endif %} p-side-navigation__icon"></i>First level item that is not a link</span>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">First level link with a label<div class="p-side-navigation__status"><span class="p-label--new">New</span></div></a>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#"><i class="p-icon--search {% if is_dark %}is-light{% endif %} p-side-navigation__icon"></i>First level link with a label is long and wraps wraps wraps wraps wraps wraps<div class="p-side-navigation__status"><span class="p-label--updated">Updated</span></div></a>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#"><span class="u-truncate">First level link with label that is truncated because it's long long long long long long long</span><div class="p-side-navigation__status"><span class="p-label--validated">Validated</span></div></a>
       </li>
     </ul>
@@ -68,33 +68,33 @@
           <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Second level link</a>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <span class="p-side-navigation__text">Second level text</span>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <span class="p-side-navigation__text">Second level text with children</span>
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item">
                 <span class="p-side-navigation__text">Third level text</span>
               </li>
-              <li class="p-side-navigation__item ">
+              <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link is-active" href="#">Third level active item that is long and wraps wraps wraps wraps wraps wraps</a>
               </li>
-              <li class="p-side-navigation__item ">
+              <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link" href="#"><span class="u-truncate">Third level link that is truncated because it's long long long long long long long</span></a>
               </li>
-              <li class="p-side-navigation__item ">
+              <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link" href="#">Third level link</a>
               </li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <span class="p-side-navigation__text">First level item that is not a link</span>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">First level link</a>
       </li>
     </ul>
-</div>
+  </nav>
