--- a/templates/docs/examples/patterns/side-navigation/icons.html
+++ b/templates/docs/examples/patterns/side-navigation/icons.html
@@ -11,7 +11,7 @@
 
   <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
-  <div class="p-side-navigation__drawer">
+  <nav class="p-side-navigation__drawer">
     <div class="p-side-navigation__drawer-header">
       <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
         Toggle side navigation
@@ -28,12 +28,12 @@
           <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Anna von Example</a>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Bob Anonymous</a>
           </li>
         </ul>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">
           <i class="p-icon--help p-side-navigation__icon"></i>
           Get help
@@ -66,7 +66,7 @@
       </li>
     </ul>
 
-  </div>
+  </nav>
 </div>
 
 <script>
