--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% include "docs/examples/layouts/_global-nav.html" %}
 
-<header id="navigation" class="p-navigation is-dark">
+<header id="navigation" class="p-navigation is-dark" role="banner">
   <div class="p-navigation__row">
     <div class="p-navigation__banner">
       <div class="p-navigation__logo">
