--- a/templates/docs/examples/patterns/side-navigation/docs.html
+++ b/templates/docs/examples/patterns/side-navigation/docs.html
@@ -11,7 +11,7 @@
 
   <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
-  <div class="p-side-navigation__drawer">
+  <nav class="p-side-navigation__drawer">
     <div class="p-side-navigation__drawer-header">
       <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
         Toggle side navigation
@@ -25,10 +25,10 @@
       <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">About MAAS</a>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">Explore MAAS</a>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">Quick start<span class="p-side-navigation__status"><span class="p-label--new">New</span></span></a>
       </li>
     </ul>
@@ -36,7 +36,7 @@
       <li class="p-side-navigation__item--title">
         <a class="p-side-navigation__link" href="#">Machines</a>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">Commission machines</a>
       </li>
       <li class="p-side-navigation__item">
@@ -45,15 +45,15 @@
           <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Hardware testings</a>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Network testing</a>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" aria-current="page" href="#">Commissioning and hardware testing scripts</a>
           </li>
         </ul>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">Deploy machines</a>
       </li>
     </ul>
@@ -69,23 +69,23 @@
       <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">Getting help</a>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">MAAS 2.5 (and earlier) documentation</a>
       </li>
-      <li class="p-side-navigation__item ">
+      <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#">Upgrading MAAS</a>
         <ul class="p-side-navigation__list">
           <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Upgrade from 2.3 to 2.4</a>
           </li>
-          <li class="p-side-navigation__item ">
+          <li class="p-side-navigation__item">
             <a class="p-side-navigation__link" href="#">Upgrade from 1.9 to 2.x<span class="p-side-navigation__status"><i class="p-icon--warning"></i></span></a>
           </li>
         </ul>
       </li>
     </ul>
 
-  </div>
+  </nav>
 </div>
 
 <script>
