replace role banner with header tag

--- a/templates/docs/examples/layouts/application-structure.html
+++ b/templates/docs/examples/layouts/application-structure.html
@@ -7,7 +7,7 @@
     <div class="u-clearfix"><code>l-navigation-bar</code> <button class="u-float-right js-menu-toggle is-dense u-no-margin">Menu</button></div>
   </div>
 
-  <div class="l-navigation" role="banner">
+  <header class="l-navigation">
     <div class="l-navigation__drawer">
       <p class="demo-controls u-hide--large u-align--right">
         <button class="js-menu-pin is-dense u-no-margin u-hide--small">Pin</button>
@@ -15,7 +15,7 @@
       </p>
       <code>l-navigation &gt;<br> l-navigation__drawer</code>
     </div>
-  </div>
+  </header>
 
   <main class="l-main">
     <p><code>l-main</code></p>
