--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div class="l-navigation is-collapsed" role="banner">
+  <header class="l-navigation is-collapsed">
     <div class="l-navigation__drawer">
       <div class="p-panel is-dark">
         <div class="p-panel__header--sticky">
@@ -35,7 +35,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </header>
 
   <main class="l-main">
     <div class="p-panel">
