--- a/templates/docs/examples/patterns/side-navigation/_layout-application.html
+++ b/templates/docs/examples/patterns/side-navigation/_layout-application.html
@@ -1,9 +1,10 @@
 {# used by the application layout example #}
 
-<nav class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons">
+<div class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons">
   {% if is_dark %}
   <!-- dark background color should be changed via color theme variables, inline style is used here for example purposes -->
   {% endif %}
+  <nav aria-label="Main navigation">
     <ul class="p-side-navigation__list">
       <li class="p-side-navigation__item--title">
         <a class="p-side-navigation__link" href="#">Title that is a link</a>
@@ -98,3 +99,4 @@
       </li>
     </ul>
   </nav>
+  </div>
