remove unnecessary banner role

--- a/templates/docs/examples/patterns/side-navigation/_default.html
+++ b/templates/docs/examples/patterns/side-navigation/_default.html
@@ -1,4 +1,4 @@
-<div class="p-side-navigation {% if is_dark %}is-dark{% endif %}" id="drawer" role="banner">
+<div class="p-side-navigation {% if is_dark %}is-dark{% endif %}" id="drawer">
 
   <a href="#drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
     Toggle side navigation
