--- a/templates/docs/examples/patterns/side-navigation/_icons.html
+++ b/templates/docs/examples/patterns/side-navigation/_icons.html
@@ -1,4 +1,4 @@
-<div class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons" role="banner">
+<div class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons">
   <a href="#drawer-icons" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer-icons">
     Toggle side navigation
   </a>
