--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -13,23 +13,60 @@ $lightness-threshold: 70;
     }
   }
 
+  %navigation-link-responsive-padding-vertical {
+    padding-bottom: $spv-inner--medium;
+    padding-top: $spv-inner--medium;
+  }
+
+  %navigation-link-responsive-padding-left {
+    // follows grid padding to ensure nav items on small breakpoints align with grid padding
+    @media (max-width: $threshold-4-6-col) {
+      padding-left: map-get($grid-margin-widths, small);
+    }
+
+    @media (min-width: $threshold-4-6-col) and (max-width: $breakpoint-navigation-threshold) {
+      padding-left: map-get($grid-margin-widths, medium);
+    }
+
+    @media (min-width: $breakpoint-navigation-threshold) {
+      padding-left: $sph-inner;
+    }
+  }
+
+  %navigation-link-responsive-padding-right {
+    // follows grid padding to ensure nav items on small breakpoints align with grid padding
+    @media (max-width: $threshold-4-6-col) {
+      padding-right: map-get($grid-margin-widths, small);
+    }
+
+    @media (min-width: $threshold-4-6-col) and (max-width: $breakpoint-navigation-threshold) {
+      padding-right: map-get($grid-margin-widths, medium);
+    }
+
+    @media (min-width: $breakpoint-navigation-threshold) {
+      padding-right: $sph-inner;
+    }
+  }
+
+  %navigation-link-responsive-padding-horizontal {
+    @extend %navigation-link-responsive-padding-left;
+    @extend %navigation-link-responsive-padding-right;
+  }
+
   %navigation-link {
     $properties: #{background-color, color, opacity};
-    @include vf-animation($properties);
+    @extend %navigation-link-responsive-padding-horizontal;
+    @extend %navigation-link-responsive-padding-vertical;
+    @include vf-animation($properties, snap);
     @include vf-focus;
 
     display: block;
     line-height: map-get($line-heights, default-text);
     margin-bottom: 0;
     overflow: hidden;
-    padding: $spv-inner--medium 0;
     position: relative;
     text-overflow: ellipsis;
     white-space: nowrap;
-
-    @media (min-width: $breakpoint-navigation-threshold) {
-      padding: $spv-inner--medium $sph-inner;
-    }
 
     &::before {
       content: '';
@@ -38,6 +75,16 @@ $lightness-threshold: 70;
       position: absolute;
       right: 0;
       top: 0;
+
+      @media (max-width: $threshold-4-6-col) {
+        left: map-get($grid-margin-widths, small);
+        right: map-get($grid-margin-widths, small);
+      }
+
+      @media (min-width: $threshold-4-6-col) and (max-width: $breakpoint-navigation-threshold) {
+        left: map-get($grid-margin-widths, medium);
+        right: map-get($grid-margin-widths, medium);
+      }
 
       @media (min-width: $breakpoint-navigation-threshold) {
         content: none;
@@ -49,6 +96,14 @@ $lightness-threshold: 70;
     &:focus,
     &:hover {
       text-decoration: none;
+    }
+
+    &:visited,
+    &:focus,
+    &:hover {
+      &::before {
+        content: none;
+      }
     }
   }
 
@@ -95,6 +150,9 @@ $lightness-threshold: 70;
       @extend %fixed-width-container;
       @extend %navigation-row;
 
+      padding-left: 0;
+      padding-right: 0;
+
       &--full-width {
         @extend %vf-grid-container-padding;
         @extend %navigation-row;
@@ -120,9 +178,23 @@ $lightness-threshold: 70;
 
     // navigation logo
     &__banner {
+      @extend %navigation-link-responsive-padding-left;
+
       display: flex;
       flex: 0 0 auto;
       justify-content: space-between;
+
+      @media (max-width: $threshold-4-6-col) {
+        padding-right: 0;
+      }
+
+      @media (min-width: $threshold-4-6-col) and (max-width: $breakpoint-navigation-threshold) {
+        padding-right: 0;
+      }
+
+      @media (min-width: $breakpoint-navigation-threshold) {
+        padding-left: map-get($grid-margin-widths, large);
+      }
     }
 
     &__logo {
@@ -186,13 +258,23 @@ $lightness-threshold: 70;
       min-width: 10em;
       order: -1;
 
+      @media (max-width: $threshold-4-6-col) {
+        margin-left: map-get($grid-margin-widths, small);
+        margin-right: map-get($grid-margin-widths, small);
+      }
+
+      @media (min-width: $threshold-4-6-col) and (max-width: $breakpoint-navigation-threshold) {
+        margin-left: map-get($grid-margin-widths, medium);
+        margin-right: map-get($grid-margin-widths, medium);
+      }
+
       @media (min-width: $breakpoint-navigation-threshold) {
         // align baselines of menu items and input text
         $input-gap-top: $spv-inner--medium - $spv-nudge;
 
         display: flex;
         flex: 1 1 auto;
-        margin: $input-gap-top 0 auto auto;
+        margin: $input-gap-top map-get($grid-margin-widths, large) auto auto;
         max-width: 20rem;
         min-width: initial;
         order: 1;
@@ -214,10 +296,11 @@ $lightness-threshold: 70;
 
       &--open,
       &--close {
+        @extend %navigation-link-responsive-padding-horizontal;
+        @extend %navigation-link-responsive-padding-vertical;
         @include vf-focus;
 
-        margin: 0 0 auto $sph-inner;
-        padding: $spv-inner--medium 0;
+        margin: 0 0 auto 0;
 
         &,
         &:visited,
@@ -286,7 +369,9 @@ $lightness-threshold: 70;
   // color for navigation background
   $color-navigation-background,
   // color for navigation text
-  $color-navigation-text
+  $color-navigation-text,
+  $color-navigation-background--hover,
+  $color-navigation-text--hover
 ) {
   background-color: $color-navigation-background;
 
@@ -303,8 +388,8 @@ $lightness-threshold: 70;
   }
 
   %navigation-link-selected {
-    background-color: $color-navigation-text;
-    color: $color-navigation-background;
+    background-color: $color-navigation-background--hover;
+    color: $color-navigation-text--hover;
   }
 
   %navigation-link-before {
@@ -347,7 +432,9 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $colors--light-theme--background-default,
       $color-navigation-text: $colors--light-theme--text-default,
-      $color-navigation-separator: $colors--light-theme--border-default
+      $color-navigation-separator: $colors--light-theme--border-default,
+      $color-navigation-background--hover: $colors--light-theme--background-alt,
+      $color-navigation-text--hover: $colors--light-theme--text-default
     );
   } @else {
     // take $color-navigation-background (that can be overridden) into account
@@ -357,7 +444,9 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $color-navigation-background,
       $color-navigation-text: $color-navigation-text,
-      $color-navigation-separator: $colors--light-theme--border-default
+      $color-navigation-separator: $colors--light-theme--border-default,
+      $color-navigation-background--hover: $colors--light-theme--background-alt,
+      $color-navigation-text--hover: $colors--light-theme--text-default
     );
   }
 }
@@ -367,7 +456,9 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $colors--dark-theme--background-alt,
       $color-navigation-text: $colors--dark-theme--text-default,
-      $color-navigation-separator: $colors--dark-theme--border-default
+      $color-navigation-separator: $colors--dark-theme--border-default,
+      $color-navigation-background--hover: $colors--dark-theme--text-default,
+      $color-navigation-text--hover: $colors--dark-theme--background-default
     );
   } @else {
     // take $color-navigation-background (that can be overridden) into account
@@ -377,7 +468,9 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $color-navigation-background,
       $color-navigation-text: $color-navigation-text,
-      $color-navigation-separator: $colors--dark-theme--border-default
+      $color-navigation-separator: $colors--dark-theme--border-default,
+      $color-navigation-background--hover: $colors--dark-theme--text-default,
+      $color-navigation-text--hover: $colors--dark-theme--background-default
     );
   }
 }
