background hover fix

--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -138,6 +138,8 @@
   $color-subnav-background,
   // color of the subnav items text
   $color-subnav-text,
+  // color of the subnav items background on hover
+  $color-subnav-background-hover,
   // color of the subnav items text on hover
   $color-subnav-text-hover,
   // color of the subnav items separator on small screens
@@ -158,6 +160,7 @@
     }
 
     &:hover {
+      background-color: $color-subnav-background-hover;
       color: $color-subnav-text-hover;
     }
 
@@ -175,7 +178,8 @@
     $color-subnav-icon: $colors--light-theme--text-muted,
     $color-subnav-background: $colors--light-theme--background-default,
     $color-subnav-text: $colors--light-theme--text-default,
-    $color-subnav-text-hover: $colors--light-theme--text-hover,
+    $color-subnav-background-hover: $colors--light-theme--background-alt,
+    $color-subnav-text-hover: $colors--light-theme--text-default,
     $color-subnav-separator: $colors--light-theme--border-default
   );
 }
@@ -189,7 +193,8 @@
     $color-subnav-icon: #999,
     $color-subnav-background: $colors--dark-theme--background-alt,
     $color-subnav-text: $colors--dark-theme--text-default,
-    $color-subnav-text-hover: $colors--dark-theme--text-hover,
+    $color-subnav-text-hover: $colors--dark-theme--background-default,
+    $color-subnav-background-hover: $colors--dark-theme--text-default,
     $color-subnav-separator: $colors--dark-theme--border-default
   );
 }
