restore right margin to nav on desktop

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -229,6 +229,8 @@ $lightness-threshold: 70;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        margin-right: map-get($grid-margin-widths, large);
+
         width: 100%;
       }
     }
