remove incorrect grid roles from all tables

--- a/templates/docs/examples/patterns/tables/table-sortable.html
+++ b/templates/docs/examples/patterns/tables/table-sortable.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}patterns_table-sortable{% endblock %}
 
 {% block content %}
-<table class="p-table--sortable" role="grid">
+<table class="p-table--sortable" >
   <thead>
     <tr>
       <th id="t-name" aria-sort="none" role="columnheader">Status</th>
@@ -14,23 +14,23 @@
     </tr>
   </thead>
   <tbody>
-    <tr role="row">
+    <tr>
       <td role="rowheader">Ready</td>
-      <td role="gridcell" class="u-align--right">1</td>
-      <td role="gridcell" class="u-align--right">1 GiB</td>
-      <td role="gridcell" class="u-align--right">2</td>
+      <td class="u-align--right">1</td>
+      <td class="u-align--right">1 GiB</td>
+      <td class="u-align--right">2</td>
     </tr>
-    <tr role="row">
+    <tr>
       <td role="rowheader">Ready</td>
-      <td role="gridcell" class="u-align--right">1</td>
-      <td role="gridcell" class="u-align--right">1 GiB</td>
-      <td role="gridcell" class="u-align--right">2</td>
+      <td class="u-align--right">1</td>
+      <td class="u-align--right">1 GiB</td>
+      <td class="u-align--right">2</td>
     </tr>
-    <tr role="row">
+    <tr>
       <td role="rowheader">Ready</td>
-      <td role="gridcell" class="u-align--right">8</td>
-      <td role="gridcell" class="u-align--right">3.9 GiB</td>
-      <td role="gridcell" class="u-align--right">3</td>
+      <td class="u-align--right">8</td>
+      <td class="u-align--right">3.9 GiB</td>
+      <td class="u-align--right">3</td>
     </tr>
   </tbody>
 </table>
